--- a/src/TimHanewich.Cds.csproj
+++ b/src/TimHanewich.Cds.csproj
@@ -2,10 +2,31 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <Authors>Tim Hanewich</Authors>
+    <Description>Helper library for transacting with Microsoft's Common Data Service (XRM)</Description>
+    <Copyright>Tim Hanewich</Copyright>
+    <PackageIcon>CdsLogo.jpg</PackageIcon>
+    <PackageLicenseFile>License.md</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/TimHanewich/TimHanewich.Cds</RepositoryUrl>
+    <PackageTags>cds,common data service,xrm</PackageTags>
+    <FileVersion>0.0.0.0</FileVersion>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="CdsLogo.jpg">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="License.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
