--- a/src/TimHanewich.Cds.csproj
+++ b/src/TimHanewich.Cds.csproj
@@ -7,7 +7,7 @@
     <Description>Helper library for transacting with Microsoft's Common Data Service (XRM)</Description>
     <Copyright>Tim Hanewich</Copyright>
     <PackageIcon>CdsLogo.jpg</PackageIcon>
-    <PackageLicenseFile>License.md</PackageLicenseFile>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RepositoryUrl>https://github.com/TimHanewich/TimHanewich.Cds</RepositoryUrl>
     <PackageTags>cds,common data service,xrm</PackageTags>
     <FileVersion>0.0.0.0</FileVersion>
@@ -23,7 +23,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-    <None Include="License.md">
+    <None Include="..\LICENSE.md">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
