--- a/src/TimHanewich.Cds.csproj
+++ b/src/TimHanewich.Cds.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.3.0</Version>
     <Authors>Tim Hanewich</Authors>
-    <Description>Helper library for transacting with Microsoft's Common Data Service (XRM)</Description>
+    <Description>Helper library for transacting with the Microsoft Dataverse service (formerly Common Data Service "CDS" or "XRM")</Description>
     <Copyright>Tim Hanewich</Copyright>
     <PackageIcon>CdsLogo.jpg</PackageIcon>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
