--- a/src/TimHanewich.Cds.csproj
+++ b/src/TimHanewich.Cds.csproj
@@ -6,10 +6,10 @@
     <Authors>Tim Hanewich</Authors>
     <Description>Helper library for transacting with the Microsoft Dataverse service (formerly Common Data Service "CDS" or "XRM")</Description>
     <Copyright>Tim Hanewich</Copyright>
-    <PackageIcon>CdsLogo.jpg</PackageIcon>
+    <PackageIcon>dataverse.png</PackageIcon>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RepositoryUrl>https://github.com/TimHanewich/TimHanewich.Cds</RepositoryUrl>
-    <PackageTags>cds,common data service,xrm</PackageTags>
+    <PackageTags>cds,common data service,xrm,dataverse,teams</PackageTags>
     <FileVersion>0.0.0.0</FileVersion>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
   </PropertyGroup>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="CdsLogo.jpg">
+    <None Include="dataverse.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
