--- a/src/TimHanewich.Cds.csproj
+++ b/src/TimHanewich.Cds.csproj
@@ -15,7 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="TimHanewich.OData" Version="0.1.1" />
   </ItemGroup>
 
   <ItemGroup>
