--- a/FunctionalTesting/FunctionalTesting.csproj
+++ b/FunctionalTesting/FunctionalTesting.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\src\TimHanewich.Cds.csproj" />
+    <ProjectReference Include="..\src\TimHanewich.Dataverse.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
